--- a/index.html
+++ b/index.html
@@ -567,10 +567,9 @@
                   <div class="card-body">
                     <h5 class="card-title">FOOTBALL MANAGER 2021</h5>
                     <p class="card-text">
-                      Encuentra todo el contenido de Gear Club Unlimited 2 y
-                      descubre nuevos experimentos de conducción: en carreteras
-                      sencillas & en circuitos, para desafíos de velocidad y
-                      resistencia... ¡pero siempre con vehículos de prestigio!
+                      ¿Quieres dominar el mundo del fútbol con uno de los
+                      equipos semiprofesionales del juego? ¿O eres el tipo de
+                      mánager que prefiere un club acostumbrado al éxito?
                     </p>
                     <p class="card-text">
                       <big><b>29,95€</b></big>
